<resources>
    <string name="app_name">Fridge</string>
    <string name="category_vegetable">채소</string>
    <string name="category_fruit">과일 · 견과 · 쌀</string>
    <string name="category_meat">육류 · 계란류</string>
    <string name="category_milk">유제품</string>
    <string name="category_seafood">수산 · 해산</string>
    <string name="permission_need">권한이 필요합니다.</string>
    <string name="permission_reason">객체 인식 및 식재료 추가를 위해서 카메라 접근 권한이 필요합니다.</string>
    <string name="permission_agree">동의하기</string>
    <string name="permission_cancel">취소하기</string>
    <string name="ingredient">%s %d</string>
    <string name="ingredient_name">%s </string>
    <string name="ingredient_count">%d</string>
    <string name="category_seasoning">조미료</string>
    <string name="floating_btn">FloatingButton</string>
    <string name="refrigerator">냉장고</string>
    <string name="my_refrigerator">내 냉장고</string>
    <string name="recipe">레시피</string>
    <string name="ingredient_complete">재료 추가 완료</string>
    <string name="add_complete">추가 완료</string>
    <string name="camera_right">이 내용이 맞나요?</string>
    <string name="self_add">직접 추가</string>
    <string name="category_choice">카테고리 선택</string>
    <string name="self_ingredient_add">재료 직접 추가하기</string>
    <string name="hint_ingredients">재료명을 입력해주세요</string>
    <string name="refrigerator_fragment">Refrigerator fragment</string>
    <string name="recipe_fragment">Recipe fragment</string>
    <string name="camera_fragment">Camera fragment</string>
    <string name="recipe_hint">레시피를 검색해보세요</string>
    <string name="recommended_recipe">👩‍🍳오늘의 추천 요리</string>
    <string name="search_recipe">레시피 검색</string>
    <string name="already_have_ingredient">#0D99FF</string>
    <string name="made_by">로 만들수 있는 요리</string>
    <string name="except">으</string>
    <string-array name="spinner_ingredients">
        <item>채소</item>
        <item>과일, 견과, 쌀</item>
        <item>육류, 계란류</item>
        <item>유제품</item>
        <item>수산, 해산</item>
    </string-array>
    <string name="suggest_recipe">💁🏻‍♀️ 추천 레시피</string>
    <string name="until_day">%d일 남았어요</string>
    <string name="food_count">%d개</string>
    <string name="search_empty">검색결과가 없습니다.</string>
    <string name="search_recipe_intro">레시피를 검색해보세요😋</string>
    <string name="title_dynamicfeature">CustomView</string>
    <string name="java_entry_title" translatable="false">Run the ML Kit quickstart written in Java</string>
    <string name="kotlin_entry_title" translatable="false">Run the ML Kit quickstart written in Kotlin</string>
    <string name="ok" translatable="false">OK</string>
    <string name="permission_camera_rationale" translatable="false">Access to the camera is needed for detection</string>
    <string name="no_camera_permission" translatable="false">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error" translatable="false">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on" translatable="false">Front</string>
    <string name="toggle_turn_off" translatable="false">Back</string>
    <string name="desc_camera_source_activity" translatable="false">Vision detectors demo with live camera preview</string>
    <string name="desc_still_image_activity" translatable="false">Vision detectors demo with a still image</string>
    <string name="desc_camerax_live_preview_activity" translatable="false">Vision detectors demo with live preview using CameraX. Note that CameraX is only supported on API 21+</string>
    <string name="desc_cameraxsource_demo_activity" translatable="false">Object detection with custom classifier using ML Kit CameraXSource API. Note that CameraX is only supported on API 21+</string>
    <string name="download_error" translatable="false">Download error</string>
    <string name="start_over" translatable="false">Start over</string>
    <string name="menu_item_settings" translatable="false">Settings</string>
    <string name="select_image" translatable="false">Select image</string>
    <string name="custom_object_detection" translatable="false">Custom Object Detector</string>
    <string name="pref_screen" translatable="false">ps</string>
    <string name="pref_screen_title_live_preview" translatable="false">Live preview settings</string>
    <string name="pref_screen_title_still_image" translatable="false">Still image settings</string>
    <string name="pref_screen_title_camerax_live_preview" translatable="false">CameraX live preview settings</string>
    <string name="pref_screen_title_cameraxsource_demo" translatable="false">CameraXSource live preview settings</string>
    <string name="pref_category_info" translatable="false">Detection Info</string>
    <string name="pref_category_face_detection" translatable="false">Face Detection</string>
    <string name="pref_category_object_detection" translatable="false">Object Detection / Custom Object Detection</string>
    <string name="pref_category_automl" translatable="false">AutoML Image Labeling</string>
    <string name="pref_category_pose_detection" translatable="false">Pose Detection</string>
    <string name="pref_category_segmentation" translatable="false">Selfie Segmentation</string>
    <string name="pref_category_text_recognition" translatable="false">Text Recognition</string>
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera" translatable="false">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camerax_rear_camera_target_resolution" translatable="false">crctas</string>
    <string name="pref_key_camerax_front_camera_target_resolution" translatable="false">cfctas</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size" translatable="false">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size" translatable="false">Front camera preview size</string>
    <string name="pref_title_camerax_rear_camera_target_resolution" translatable="false">CameraX rear camera target resolution</string>
    <string name="pref_title_camerax_front_camera_target_resolution" translatable="false">CameraX front camera target resolution</string>
    <string name="pref_title_camera_live_viewport" translatable="false">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport" translatable="false">Do not block camera preview drawing on detection</string>
    <string name="pref_title_info_hide" translatable="false">Hide detection info</string>
    <string name="pref_key_info_hide" translatable="false">ih</string>
    <string name="pref_title_group_recognized_text_in_blocks" translatable="false">Group recognized text in paragraphs</string>
    <string name="pref_key_group_recognized_text_in_blocks" translatable="false">grtib</string>
    <string name="pref_title_show_language_tag" translatable="false">Show language identified</string>
    <string name="pref_key_show_language_tag" translatable="false">slt</string>
    <string name="pref_title_show_text_confidence" translatable="false">Show confidence score</string>
    <string name="pref_key_show_text_confidence" translatable="false">stc</string>
    <string name="pref_title_object_detector_enable_multiple_objects" translatable="false">Enable multiple objects</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects" translatable="false">siodemo</string>
    <string name="pref_title_object_detector_enable_classification" translatable="false">Enable classification</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>
    <string name="pref_key_still_image_object_detector_enable_classification" translatable="false">siodec</string>
    <string name="pref_title_face_detector_landmark_mode" translatable="false">Landmark mode</string>
    <string name="pref_key_live_preview_face_detection_landmark_mode" translatable="false">lpfdlm</string>
    <string name="pref_entries_face_detector_landmark_mode_no_landmarks" translatable="false">No landmarks</string>
    <string name="pref_entries_face_detector_landmark_mode_all_landmarks" translatable="false">All landmarks</string>
    <string name="pref_entry_values_face_detector_landmark_mode_no_landmarks" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_landmark_mode_all_landmarks" translatable="false">2</string>
    <string name="pref_title_face_detector_contour_mode" translatable="false">Contour mode</string>
    <string name="pref_key_live_preview_face_detection_contour_mode" translatable="false">lpfdcm</string>
    <string name="pref_entries_face_detector_contour_mode_no_contours" translatable="false">No contours</string>
    <string name="pref_entries_face_detector_contour_mode_all_contours" translatable="false">All contours</string>
    <string name="pref_entry_values_face_detector_contour_mode_no_contours" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_contour_mode_all_contours" translatable="false">2</string>
    <string name="pref_title_face_detector_classification_mode" translatable="false">Classification mode</string>
    <string name="pref_key_live_preview_face_detection_classification_mode" translatable="false">lpfdcfm</string>
    <string name="pref_entries_face_detector_classification_mode_no_classifications" translatable="false">No classifications</string>
    <string name="pref_entries_face_detector_classification_mode_all_classifications" translatable="false">All classifications</string>
    <string name="pref_entry_values_face_detector_classification_mode_no_classifications" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_classification_mode_all_classifications" translatable="false">2</string>
    <string name="pref_title_face_detector_performance_mode" translatable="false">Performance mode</string>
    <string name="pref_key_live_preview_face_detection_performance_mode" translatable="false">lpfdpm</string>
    <string name="pref_entries_face_detector_performance_mode_fast" translatable="false">Fast</string>
    <string name="pref_entries_face_detector_performance_mode_accurate" translatable="false">Accurate</string>
    <string name="pref_entry_values_face_detector_performance_mode_fast" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_performance_mode_accurate" translatable="false">2</string>
    <string name="pref_title_face_detector_face_tracking" translatable="false">Face tracking</string>
    <string name="pref_key_live_preview_face_detection_face_tracking" translatable="false">lpfdft</string>
    <string name="pref_title_face_detector_min_face_size" translatable="false">Minimum face size</string>
    <string name="pref_key_live_preview_face_detection_min_face_size" translatable="false">lpfdmfs</string>
    <string name="pref_dialog_message_face_detector_min_face_size" translatable="false">Proportion of the head width to the image width, and the valid value range is [0.0, 1.0]</string>
    <string name="pref_toast_invalid_min_face_size" translatable="false">Minimum face size must be a float value and in the range [0.0, 1.0]</string>
    <string name="pref_title_pose_detector_performance_mode" translatable="false">Performance mode</string>
</resources>