<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/sub_space_16"
        tools:context=".presentation.home.fragment.CameraFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_et_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sub_space_54"
            android:gravity="center_vertical"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_rectangle_searchgray_12"
                android:clickable="true"
                android:focusable="false"
                android:gravity="center_vertical"
                android:hint="@string/recipe_hint"
                android:paddingVertical="0dp"
                android:textAppearance="@style/Widget.TextView.Pretendard15_Black_Regular.TextAppearance"
                android:textColor="@color/black"
                android:textColorHint="@color/search_gray" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_recommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sub_space_24"
            android:text="@string/recommended_recipe"
            android:textAppearance="@style/Widget.TextView.Pretendard18_Black_Bold.TextAppearance"
            app:layout_constraintStart_toStartOf="@+id/layout_et_search"
            app:layout_constraintTop_toBottomOf="@+id/layout_et_search" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow_recommend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sub_space_12"
            android:orientation="horizontal"
            app:constraint_referenced_ids="iv_recommend1,iv_recommend2"
            app:flow_horizontalGap="@dimen/sub_space_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_recommend" />


        <ImageView
            android:id="@+id/iv_recommend1"
            android:layout_width="0dp"
            android:layout_height="@dimen/sub_space_200"
            android:src="@drawable/ic_search" />

        <ImageView
            android:id="@+id/iv_recommend2"
            android:layout_width="0dp"
            android:layout_height="@dimen/sub_space_200"
            android:src="@drawable/ic_arrow" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow_recommend1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sub_space_16"
            android:layout_marginBottom="@dimen/sub_space_20"
            android:orientation="vertical"
            app:constraint_referenced_ids="tv_recipe1_name,tv_recipe1_time"
            app:flow_verticalGap="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_recommend1"
            app:layout_constraintStart_toStartOf="@+id/iv_recommend1" />

        <TextView
            android:id="@+id/tv_recipe1_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Widget.TextView.Pretendard16_Black_SemiBold.TextAppearance"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/flow_recommend1"
            tools:text="@string/recipe" />

        <TextView
            android:id="@+id/tv_recipe1_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Widget.TextView.Pretendard16_Black_SemiBold.TextAppearance"
            android:textColor="@color/recipe_gray"
            app:layout_constraintStart_toStartOf="@+id/flow_recommend1"
            tools:text="🕒 5분" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow_recommend2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sub_space_16"
            android:layout_marginBottom="@dimen/sub_space_20"
            android:orientation="vertical"
            app:constraint_referenced_ids="tv_recipe2_name,tv_recipe2_time"
            app:flow_verticalGap="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_recommend2"
            app:layout_constraintStart_toStartOf="@+id/iv_recommend2" />

        <TextView
            android:id="@+id/tv_recipe2_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Widget.TextView.Pretendard16_Black_SemiBold.TextAppearance"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/flow_recommend2"
            tools:text="@string/recipe" />

        <TextView
            android:id="@+id/tv_recipe2_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Widget.TextView.Pretendard16_Black_SemiBold.TextAppearance"
            android:textColor="@color/recipe_gray"
            app:layout_constraintStart_toStartOf="@+id/flow_recommend2"
            tools:text="🕒 5분" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_recipe"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flow_recommend" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>